[build-system]
requires = ["maturin>=0.10,<0.11"]
build-backend = "maturin"

[tool.poetry]
name = "hosh"
version = "0.210901.0"
description = "Fast operable hash"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
