[package]
name = "halgpy"
version = "0.1.0"
authors = ["davips <dpsabc@gmail.com>"]
edition = "2018"

[lib]
name = "halgpy"
## crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
halg = { path = "../rust" }
reduce = "0.1"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.blake3]
version = "0.3.7"
default-features = true
features = ["rayon"]

