[tool.poetry]
name = "halg"
version = "0.2103.0"
description = "Fast cryptographic hash and algebra"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
