[package]
name = "halg"
version = "0.1.0"
authors = ["davips <dpsabc@gmail.com>"]
edition = "2018"

[features]
divrem = ["specialized-div-rem"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
#primitive-types = "0.9.0"  //U256 is too slow to generate b62 digits
#rusty-perm = "0.2.0"  //const generics are unstable
im = "10.2.0"  # cons list
specialized-div-rem = { version = "1.0.0", optional = true }
reduce = "0.1"
rustversion = "1.0"

[dependencies.blake3]
version = "0.3.7"
default-features = true
features = ["rayon"]

